--- a/index.html
+++ b/index.html
@@ -110,6 +110,19 @@
         cursor: pointer;
         user-select: none;
     }
+    .attkbutton15 {
+        width:180px;
+        font-size:25px;
+        padding:25px;
+        border-radius: 10px;
+        background-color:purple;
+        user-select: none;   
+        color:rgb(207, 5, 207);   
+    }
+    .attkbutton15:hover{
+        cursor: pointer;
+        user-select: none;
+    }
 </style>
 </head>
 <body>
@@ -157,6 +170,7 @@
       <br>The Water Kingdom<br>
       Level(401-500):<br>
       <input id="z" class="attkbutton10" type="number" name="level" min="301" max="400">
+      <span class="split attkbutton15" onclick="window.location.href = 'battle.html';"><center>The Gas Giant</center></span>
       <br>
       press enter to start
     </form>
