--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       <br>The Lightning Storm<br>
       Level(301-400):<br>
       <input id="z" class="attkbutton8" type="number" name="level" min="301" max="400">
-      <span class="split attkbutton14" onclick="window.location.href = 'battle.html';"><center>The Bolt Cloud</center></span>
+      <span class="split attkbutton14" onclick="window.location.href = 'battle.html';"><center>The Bolt Clouds</center></span>
       <br>
       press enter to start
     </form>
@@ -162,7 +162,7 @@
       <br>The Gas Chamber<br>
       Level(401-500):<br>
       <input id="z" class="attkbutton10" type="number" name="level" min="401" max="500">
-      <span class="split attkbutton14" onclick="window.location.href = 'battle.html';"><center>The Bolt Cloud</center></span>
+      <span class="split attkbutton15" onclick="window.location.href = 'battle.html';"><center>The Gas Giant</center></span>
       <br>
       press enter to start
     </form>
