--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         color:purple;    
     }
     .split {
-        display:inline-block; margin-top:0px; margin-left:100px;
+        display:inline-block; margin-top:0px; margin-left:200px;
     }
     .attkbutton11 {
         width:180px;
@@ -238,90 +238,108 @@
         cursor: pointer;
         user-select: none;
     }
+    .attkbutton31 {
+        width:180px;
+        font-size:25px;
+        padding:25px;
+        border-radius: 10px;
+        background-color:rgb(255, 0, 0);  
+        user-select: none;   
+        color:rgb(51, 1, 1);  
+    }
+    .attkbutton30:hover{
+        cursor: pointer;
+        user-select: none;
+    }
+    .split2 {
+        display:inline-block; margin-top:0px; margin-left:650px;
+    }
 </style>
 </head>
 <body>
     <form class="attkbutton16 split" action="battle2.html" autocomplete="off" method="get">
       <br>Water Kingdom<br>
-      Level(1-99):<br>
-      <input id="z" class="attkbutton17" type="number" name="level" min="1" max="99">
-      <span class="split attkbutton18" onclick="window.location.href = 'battle.html';"><center>Level 100:<br>Sea Creature</center></span>
+      Army Level(1-100):<br>
+      <input id="z" class="attkbutton17" type="number" name="level" min="1" max="100">
+      <span class="split attkbutton18" onclick="window.location.href = 'battle.html';"><center>Minion:<br>Sea Creature</center></span>
       <br>
       press enter to start
     </form>
     <form class="attkbutton5 split" action="battle2.html" autocomplete="off" method="get">
       <br>Icy Curse<br>
-      Level(101-199):<br>
-      <input id="z" class="attkbutton6" type="number" name="level" min="101" max="199">
-      <span class="split attkbutton13" onclick="window.location.href = 'battle.html';"><center>Level 200:<br>Ice Witch</center></span>
+      Army Level(101-200):<br>
+      <input id="z" class="attkbutton6" type="number" name="level" min="101" max="200">
+      <span class="split attkbutton13" onclick="window.location.href = 'battle.html';"><center>Minion:<br>Ice Witch</center></span>
       <br>
       press enter to start
     </form>
     <form class="attkbutton7 split" action="battle2.html" autocomplete="off" method="get">
       <br>Lightning Storm<br>
-      Level(201-299):<br>
-      <input id="z" class="attkbutton8" type="number" name="level" min="201" max="299">
-      <span class="split attkbutton14" onclick="window.location.href = 'battle.html';"><center>Level 300:<br>Electric Tornado</center></span>
+      Army Level(201-300):<br>
+      <input id="z" class="attkbutton8" type="number" name="level" min="201" max="300">
+      <span class="split attkbutton14" onclick="window.location.href = 'battle.html';"><center>Minion:<br>Electric Tornado</center></span>
       <br>
       press enter to start
     </form>
     <form class="attkbutton9 split" action="battle2.html" autocomplete="off" method="get">
       <br>Gas Chamber<br>
-      Level(301-399):<br>
-      <input id="z" class="attkbutton10" type="number" name="level" min="301" max="399">
-      <span class="split attkbutton15" onclick="window.location.href = 'battle.html';"><center>Level 400:<br>Gas Giant</center></span>
+      Army Level(301-400):<br>
+      <input id="z" class="attkbutton10" type="number" name="level" min="301" max="400">
+      <span class="split attkbutton15" onclick="window.location.href = 'battle.html';"><center>Minion:<br>Gas Giant</center></span>
       <br>
       press enter to start
     </form>
     <form class="attkbutton22 split" action="battle2.html" autocomplete="off" method="get">
       <br>Dust Cloud<br>
-      Level(401-499):<br>
-      <input id="z" class="attkbutton23" type="number" name="level" min="401" max="499">
-      <span class="split attkbutton24" onclick="window.location.href = 'battle.html';"><center>Level 500:<br>Earth Shaker</center></span>
+      Army Level(401-500):<br>
+      <input id="z" class="attkbutton23" type="number" name="level" min="401" max="500">
+      <span class="split attkbutton24" onclick="window.location.href = 'battle.html';"><center>Minion:<br>Earth Shaker</center></span>
       <br>
       press enter to start
     </form>
     <form class="attkbutton20 split" action="battle2.html" autocomplete="off" method="get">
         <br>Crystal Cave<br>
-        Level(501-599):<br>
-        <input id="z" class="attkbutton21" type="number" name="level" min="501" max="599">
-        <span class="split attkbutton19" onclick="window.location.href = 'battle.html';"><center>Level 600:<br>Crystal Dragon</center></span>
+        Army Level(501-600):<br>
+        <input id="z" class="attkbutton21" type="number" name="level" min="501" max="600">
+        <span class="split attkbutton19" onclick="window.location.href = 'battle.html';"><center>Minion:<br>Crystal Dragon</center></span>
         <br>
         press enter to start
       </form>
     <form class="attkbutton split" action="battle.html" autocomplete="off" method="get">
-        Shadow Realm<br>
-        Level(601-699):<br>
-        <input id="x" class="attkbutton2" type="number" name="level" min="601" max="699">
-        <span class="split attkbutton11" onclick="window.location.href = 'battle.html';"><center>Level 700:<br>Dark Knight</center></span>
+        <br>Shadow Realm<br>
+        Army Level(601-700):<br>
+        <input id="x" class="attkbutton2" type="number" name="level" min="601" max="700">
+        <span class="split attkbutton11" onclick="window.location.href = 'battle.html';"><center>Minion:<br>Dark Knight</center></span>
         <br>
         press enter to start
       </form>
       
     <form class="attkbutton3 split" action="battle2.html" autocomplete="off" method="get">
         <br>Fire Mountain<br>
-        Level(701-799):<br>
-        <input id="y" class="attkbutton4" type="number" name="level" min="701" max="799">
-        <span class="split attkbutton12" onclick="window.location.href = 'battle.html';"><center>Level 800:<br>Lava Demon</center></span>
+        Army Level(701-800):<br>
+        <input id="y" class="attkbutton4" type="number" name="level" min="701" max="800">
+        <span class="split attkbutton12" onclick="window.location.href = 'battle.html';"><center>Minion:<br>Lava Demon</center></span>
         <br>
         press enter to start
       </form>
     <form class="attkbutton25 split" action="battle2.html" autocomplete="off" method="get">
       <br>Slime Tunnel<br>
-      Level(801-899):<br>
-      <input id="z" class="attkbutton26" type="number" name="level" min="801" max="899">
-      <span class="split attkbutton27" onclick="window.location.href = 'battle.html';"><center>Level 900:<br>Human Devourer</center></span>
+      Army Level(801-900):<br>
+      <input id="z" class="attkbutton26" type="number" name="level" min="801" max="900">
+      <span class="split attkbutton27" onclick="window.location.href = 'battle.html';"><center>Minion:<br>Human Devourer</center></span>
       <br>
       press enter to start
     </form>
     <form class="attkbutton28 split" action="battle2.html" autocomplete="off" method="get">
       <br>Demon's Layer<br>
-      Level(901-999):<br>
-      <input id="z" class="attkbutton29" type="number" name="level" min="901" max="999">
-      <span class="split attkbutton30" onclick="window.location.href = 'battle.html';"><center>Level 1000:<br>Demon King</center></span>
+      Army Level(901-1000):<br>
+      <input id="z" class="attkbutton29" type="number" name="level" min="901" max="1000">
+      <span class="split attkbutton30" onclick="window.location.href = 'battle.html';"><center>Minion:<br>Demon King</center></span>
       <br>
       press enter to start
     </form>
+    
+    <br><br><br><br><span class="split2 attkbutton31" onclick="window.location.href = 'battle.html';"><center>Boss:<br>Lord of Hell</center></span>
     <script>
     clock=55;
     var myMusic;
