--- a/battle.html
+++ b/battle.html
@@ -4,7 +4,7 @@
 <script src="hi.js"></script>
 <style>
     body {
-        background-color : rgb(16, 6, 70);
+      background-color : rgb(16, 6, 70);
     }
     .float{
       float: left;
@@ -74,7 +74,7 @@
     <span class="attkbutton3" id="toggles1" onclick=" myFunction5(); PS(); Mattk(12,20); Mattk2(); Lose(); Win();">poisonous spit</span>
     <p id="Mhp"></p>
     <script>
-    tattk=["1", "2"];
+    RI2 = Math.floor((Math.random() * 9) + 1)];
     car2=1000;
     myMusic2 = document.getElementById("myAudio2");
     myMusic3 = document.getElementById("myAudio3");
@@ -172,6 +172,63 @@
       if (HH <= 0){
         window.location.href="Lose.html"+qs2;
       }
+    }
+    function Image(){
+    function RandomImage(){
+      if (RI2 == 1) {
+        window.location="Win.html"+qs2;
+      }
+    }
+    function RandomImage2(){
+      if (RI == 2) {
+        window.location.href="Lose.html"+qs2;
+      }
+    }
+    function RandomImage3(){
+      if (RI == 3) {
+        window.location.href="Lose.html"+qs2;
+      }
+    }
+    function RandomImage4(){
+      if (RI == 4) {
+        window.location.href="Lose.html"+qs2;
+      }
+    }
+    function RandomImage5(){
+      if (RI == 5) {
+        window.location.href="Lose.html"+qs2;
+      }
+    }
+    function RandomImage6(){
+      if (RI == 6) {
+        window.location.href="Lose.html"+qs2;
+      }
+    }
+    function RandomImage6(){
+      if (RI2 == 6) {
+        window.location="Win.html"+qs2;
+      }
+    }
+    function RandomImage7(){
+      if (RI == 7) {
+        window.location.href="Lose.html"+qs2;
+      }
+    }
+    function RandomImage8(){
+      if (RI == 8) {
+        window.location.href="Lose.html"+qs2;
+      }
+    }
+    function RandomImage9(){
+      if (RI == 9) {
+        window.location.href="Lose.html"+qs2;
+      }
+    }
+    function RandomImage10(){
+      if (RI == 10) {
+        window.location.href="Lose.html"+qs2;
+      }
+    }
     }
     Set1();
     Set2();
