--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
     }
     .attkbutton5 {
         font-size:25px;
-        color:rgb(83, 83, 211);
+        color:rgb(157, 157, 255);
         user-select: none;       
     }
     .attkbutton6 {
         padding:20px;
         font-size:50px;
-        color:rgb(83, 83, 211);    
+        color:rgb(157, 157, 255);   
     }
     .attkbutton7 {
         font-size:25px;
@@ -56,7 +56,7 @@
         color:purple;    
     }
     .split {
-        display:inline-block; margin-top:0px; margin-left:100px;
+        display:inline-block; margin-top:0px; margin-left:200px;
     }
     .attkbutton11 {
         width:180px;
@@ -89,9 +89,9 @@
         font-size:25px;
         padding:25px;
         border-radius: 10px;
-        background-color:rgb(83, 83, 211);
+        background-color:rgb(157, 157, 255);
         user-select: none;   
-        color:rgb(2, 2, 146);     
+        color:rgb(0, 0, 194);     
     }
     .attkbutton13:hover{
         cursor: pointer;
@@ -110,56 +110,236 @@
         cursor: pointer;
         user-select: none;
     }
+    .attkbutton15 {
+        width:180px;
+        font-size:25px;
+        padding:25px;
+        border-radius: 10px;
+        background-color:purple;
+        user-select: none;   
+        color:rgb(207, 5, 207);   
+    }
+    .attkbutton15:hover{
+        cursor: pointer;
+        user-select: none;
+    }
+    .attkbutton16 {
+        font-size:25px;
+        color:rgb(0, 0, 255);
+        user-select: none;       
+    }
+    .attkbutton17 {
+        padding:20px;
+        font-size:50px;
+        color:rgb(0, 0, 255);    
+    }
+    .attkbutton18 {
+        width:180px;
+        font-size:25px;
+        padding:25px;
+        border-radius: 10px;
+        background-color:rgb(0, 0, 255);
+        user-select: none;   
+        color:rgb(0, 0, 150);  
+    }
+    .attkbutton18:hover{
+        cursor: pointer;
+        user-select: none;
+    }
+    .attkbutton19 {
+        width:180px;
+        font-size:25px;
+        padding:25px;
+        border-radius: 10px;
+        background-color:rgb(219, 67, 199);
+        user-select: none;   
+        color:rgb(150, 40, 135); 
+    }
+    .attkbutton19:hover{
+        cursor: pointer;
+        user-select: none;
+    }
+    .attkbutton20 {
+        font-size:25px;
+        color:rgb(219, 67, 199);
+        user-select: none;       
+    }
+    .attkbutton21 {
+        padding:20px;
+        font-size:50px;
+        color:rgb(219, 67, 199);    
+    }
+    .attkbutton22 {
+        font-size:25px;
+        color:rgb(121, 30, 30); 
+        user-select: none;       
+    }
+    .attkbutton23 {
+        padding:20px;
+        font-size:50px;
+        color:rgb(121, 30, 30);  
+    }
+    .attkbutton24 {
+        width:180px;
+        font-size:25px;
+        padding:25px;
+        border-radius: 10px;
+        background-color:rgb(121, 30, 30); 
+        user-select: none;   
+        color:rgb(85, 22, 22); 
+    }
+    .attkbutton24:hover{
+        cursor: pointer;
+        user-select: none;
+    }
+    .attkbutton25 {
+        font-size:25px;
+        color:rgb(0, 255, 0); 
+        user-select: none;       
+    }
+    .attkbutton26 {
+        padding:20px;
+        font-size:50px;
+        color:rgb(0, 255, 0);  
+    }
+    .attkbutton27 {
+        width:180px;
+        font-size:25px;
+        padding:25px;
+        border-radius: 10px;
+        background-color:rgb(0, 255, 0); 
+        user-select: none;   
+        color:rgb(0, 110, 0); 
+    }
+    .attkbutton27:hover{
+        cursor: pointer;
+        user-select: none;
+    }
+    .attkbutton28 {
+        font-size:25px;
+        color:rgb(172, 32, 32);  
+        user-select: none;       
+    }
+    .attkbutton29 {
+        padding:20px;
+        font-size:50px;
+        color:rgb(172, 32, 32);   
+    }
+    .attkbutton30 {
+        width:180px;
+        font-size:25px;
+        padding:25px;
+        border-radius: 10px;
+        background-color:rgb(172, 32, 32);  
+        user-select: none;   
+        color:rgb(250, 3, 3);  
+    }
+    .attkbutton30:hover{
+        cursor: pointer;
+        user-select: none;
+    }
+    .attkbutton31 {
+        width:180px;
+        font-size:25px;
+        padding:25px;
+        border-radius: 10px;
+        background-color:rgb(255, 0, 0);  
+        user-select: none;   
+        color:rgb(51, 1, 1);  
+    }
+    .attkbutton30:hover{
+        cursor: pointer;
+        user-select: none;
+    }
+    .split2 {
+        display:inline-block; margin-top:0px; margin-left:650px;
+    }
 </style>
 </head>
 <body>
-    <form class="attkbutton split" action="battle.html" autocomplete="off" method="get">
-      The Shadow Realm<br>
-      Level(1-100):<br>
-      <input id="x" class="attkbutton2" type="number" name="level" min="1" max="100">
-      <span class="split attkbutton11" onclick="window.location.href = 'battle.html';"><center>The Dark King</center></span>
-      <br>
-      press enter to start
-    </form>
-    <form class="attkbutton3 split" action="battle2.html" autocomplete="off" method="get">
-      <br>The Fire Mountain<br>
-      Level(101-200):<br>
-      <input id="y" class="attkbutton4" type="number" name="level" min="101" max="200">
-      <span class="split attkbutton12" onclick="window.location.href = 'battle.html';"><center>The Lava Demon</center></span>
+    <form class="attkbutton16 split" action="battle2.html" autocomplete="off" method="get">
+      <br>Water Kingdom<br>
+      Army Level(1-100):<br>
+      <input id="z" class="attkbutton17" type="number" name="level" min="1" max="100">
+      <span class="split attkbutton18" onclick="window.location.href = 'battle.html';"><center>Minion:<br>Sea Creature</center></span>
       <br>
       press enter to start
     </form>
     <form class="attkbutton5 split" action="battle2.html" autocomplete="off" method="get">
-      <br>The Icy Curse<br>
-      Level(201-300):<br>
-      <input id="z" class="attkbutton6" type="number" name="level" min="201" max="300">
-      <span class="split attkbutton13" onclick="window.location.href = 'battle.html';"><center>The Ice Witch</center></span>
+      <br>Icy Curse<br>
+      Army Level(101-200):<br>
+      <input id="z" class="attkbutton6" type="number" name="level" min="101" max="200">
+      <span class="split attkbutton13" onclick="window.location.href = 'battle.html';"><center>Minion:<br>Ice Witch</center></span>
       <br>
       press enter to start
     </form>
     <form class="attkbutton7 split" action="battle2.html" autocomplete="off" method="get">
-      <br>The Lightning Storm<br>
-      Level(301-400):<br>
-      <input id="z" class="attkbutton8" type="number" name="level" min="301" max="400">
-      <span class="split attkbutton14" onclick="window.location.href = 'battle.html';"><center>The Bolt Cloud</center></span>
+      <br>Lightning Storm<br>
+      Army Level(201-300):<br>
+      <input id="z" class="attkbutton8" type="number" name="level" min="201" max="300">
+      <span class="split attkbutton14" onclick="window.location.href = 'battle.html';"><center>Minion:<br>Electric Tornado</center></span>
       <br>
       press enter to start
     </form>
     <form class="attkbutton9 split" action="battle2.html" autocomplete="off" method="get">
-      <br>The Gas Chamber<br>
-      Level(401-500):<br>
-      <input id="z" class="attkbutton10" type="number" name="level" min="401" max="500">
-      <span class="split attkbutton14" onclick="window.location.href = 'battle.html';"><center>The Bolt Cloud</center></span>
-      <br>
-      press enter to start
-    </form>
-    <form class="attkbutton9 split" action="battle2.html" autocomplete="off" method="get">
-      <br>The Water Kingdom<br>
-      Level(401-500):<br>
+      <br>Gas Chamber<br>
+      Army Level(301-400):<br>
       <input id="z" class="attkbutton10" type="number" name="level" min="301" max="400">
+      <span class="split attkbutton15" onclick="window.location.href = 'battle.html';"><center>Minion:<br>Gas Giant</center></span>
       <br>
       press enter to start
     </form>
+    <form class="attkbutton22 split" action="battle2.html" autocomplete="off" method="get">
+      <br>Dust Cloud<br>
+      Army Level(401-500):<br>
+      <input id="z" class="attkbutton23" type="number" name="level" min="401" max="500">
+      <span class="split attkbutton24" onclick="window.location.href = 'battle.html';"><center>Minion:<br>Earth Shaker</center></span>
+      <br>
+      press enter to start
+    </form>
+    <form class="attkbutton20 split" action="battle2.html" autocomplete="off" method="get">
+        <br>Crystal Cave<br>
+        Army Level(501-600):<br>
+        <input id="z" class="attkbutton21" type="number" name="level" min="501" max="600">
+        <span class="split attkbutton19" onclick="window.location.href = 'battle.html';"><center>Minion:<br>Crystal Dragon</center></span>
+        <br>
+        press enter to start
+      </form>
+    <form class="attkbutton split" action="battle.html" autocomplete="off" method="get">
+        <br>Shadow Realm<br>
+        Army Level(601-700):<br>
+        <input id="x" class="attkbutton2" type="number" name="level" min="601" max="700">
+        <span class="split attkbutton11" onclick="window.location.href = 'battle.html';"><center>Minion:<br>Dark Knight</center></span>
+        <br>
+        press enter to start
+      </form>
+      
+    <form class="attkbutton3 split" action="battle2.html" autocomplete="off" method="get">
+        <br>Fire Mountain<br>
+        Army Level(701-800):<br>
+        <input id="y" class="attkbutton4" type="number" name="level" min="701" max="800">
+        <span class="split attkbutton12" onclick="window.location.href = 'battle.html';"><center>Minion:<br>Lava Demon</center></span>
+        <br>
+        press enter to start
+      </form>
+    <form class="attkbutton25 split" action="battle2.html" autocomplete="off" method="get">
+      <br>Slime Tunnel<br>
+      Army Level(801-900):<br>
+      <input id="z" class="attkbutton26" type="number" name="level" min="801" max="900">
+      <span class="split attkbutton27" onclick="window.location.href = 'battle.html';"><center>Minion:<br>Human Devourer</center></span>
+      <br>
+      press enter to start
+    </form>
+    <form class="attkbutton28 split" action="battle2.html" autocomplete="off" method="get">
+      <br>Demon's Layer<br>
+      Army Level(901-1000):<br>
+      <input id="z" class="attkbutton29" type="number" name="level" min="901" max="1000">
+      <span class="split attkbutton30" onclick="window.location.href = 'battle.html';"><center>Minion:<br>Demon King</center></span>
+      <br>
+      press enter to start
+    </form>
+    
+    <br><br><br><br><span class="split2 attkbutton31" onclick="window.location.href = 'battle.html';"><center>Boss:<br>Lord of Hell</center></span>
     <script>
     clock=55;
     var myMusic;
